Fix bug where astronaut image is cut off in mobile view

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -133,62 +133,7 @@
   margin-left: 45px;
   margin-bottom: -4px;
 }
-/* Testing content below
-.nav-pills {
-  width: 450px;
-}
-.nav-item {
-  width: 25%;
-}
-.nav-pills .nav-link {
-  font-weight: bold !important;
-  padding-top: 13px !important;
-  text-align: center !important;
-  background: #343436 !important;
-  color: #fff !important;
-  border-radius: 30px !important;
-  height: 100px !important;
-}
-.nav-pills .nav-link.active {
-  background: #fff !important;
-  color: #000 !important;
-}
-.tab-content {
-  /* position: absolute; 
-  /*width: 450px; 
-  height: auto;
-  margin-top: -17px;
-  background: #fff;
-  color: #000;
-  border-radius: 30px;
-  z-index: 1000;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
-  padding: 30px;
-  margin-bottom: 50px;
-}
-.tab-content button {
-  border-radius: 15px;
-  width: 100px;
-  margin: 0 auto;
-  float: right;
-}
 
-.content-outer {
-  display: flex;
-  justify-content: center;
-}
-
-.nav-tabs .nav-item {
-  position: relative;
-  top: 20px;
-  font-weight: bold !important;
-  padding-top: 13px !important;
-  text-align: center !important;
-  background: #343436 !important;
-  color: #fff !important;
-  border-radius: 30px !important;
-  height: 100px !important;
-} */
 .content {
   width: 675px !important;
   height: auto !important;
